# django_2

./: .gitignore  groups.json  mailing_fixture.json  message_fixture.json  pyproject.toml  users_fixture.json
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_slug.py  0003_alter_blogpost_published.py
blog/templates/: blog_post_confirm_delete.html  blog_post_detail.html  blog_post_form.html  blog_post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: initial_products.json
catalog/management/commands/: populate_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options.py  0002_version.py  0003_version_description.py  0004_alter_category_options_alter_product_options_and_more.py
catalog/templates/: base.html
catalog/templates/catalog/: category_list.html  menu.html  product_confirm_delete.html  (+5 more)
catalog/templatetags/: media_tags.py
hw3/: settings.py  urls.py
mailing/: apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_finish_send_at_and_more.py  0003_alter_mailing_finish_send_at_and_more.py  0004_alter_mailing_finish_send_at_and_more.py  0005_alter_mailing_finish_send_at_and_more.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_user_avatar_alter_user_country.py  0004_alter_user_date_joined.py  0005_alter_user_groups_alter_user_user_permissions.py
(+17 files in other folders)
